--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.1.5",
+    "@mantine/hooks": "^5.1.5",
+    "@mantine/next": "^5.1.5",
+    "autoprefixer": "^10.4.8",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.7.2",
@@ -20,6 +28,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
     "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
