--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.1.5",
     "@mantine/hooks": "^5.1.5",
     "@mantine/next": "^5.1.5",
+    "@tabler/icons": "^1.82.0",
     "autoprefixer": "^10.4.8",
     "next": "12.2.5",
     "postcss": "^8.4.16",
