--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mantine/next": "^5.1.5",
     "@tabler/icons": "^1.82.0",
     "autoprefixer": "^10.4.8",
+    "dayjs": "^1.11.5",
+    "microcms-js-sdk": "^2.2.1",
     "next": "12.2.5",
     "postcss": "^8.4.16",
     "react": "18.2.0",
