--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.1.5",
     "@mantine/hooks": "^5.1.5",
     "@mantine/next": "^5.1.5",
+    "@mantine/utils": "^5.2.4",
     "@tabler/icons": "^1.82.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
