--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.6",
     "@types/node": "18.7.2",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
